@@ -9,6 +9,7 @@ android {
     defaultConfig {
         minSdkVersion versions.sdk.min
     }
+
     buildTypes {
         def propsFile = rootProject.file('keys.properties')
         def props = new Properties()
@@ -19,6 +20,21 @@ android {
         debug {
             buildConfigField "String", "MdbApiKey", props["MdbApiKey"]
         }
+    }
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+        freeCompilerArgs += ["-Xopt-in=kotlin.RequiresOptIn"]
+    }
+
+    tasks.withType(Test) {
+        useJUnitPlatform()
+        jvmArgs '--enable-preview'
     }
 }
 
@@ -36,8 +52,15 @@ dependencies {
     api dependency.network.retrofit.converters.moshi
     api dependency.network.okhttp3.core
     api dependency.network.okhttp3.interceptors.logging
-    api dependency.network.paging
 
     testImplementation dependency.tests.junit.core
-    androidTestImplementation dependency.tests.junit.extensions
+    testImplementation dependency.tests.junit.extensions
+    testImplementation dependency.tests.junit.runner
+    testImplementation dependency.tests.junit.rules
+    testImplementation dependency.tests.junit.jupiter.api
+    testRuntimeOnly dependency.tests.junit.jupiter.engine
+    testImplementation dependency.tests.assertJ
+    testImplementation dependency.coroutines.test
+    testImplementation dependency.tests.mockk.core
+    testImplementation dependency.tests.mockk.android
 }
